syntax = "proto3";

package pb;

option go_package = ".;pb";

service Executor {
    rpc Start (StartRequest) returns (StartResult) {}
    rpc Terminate (TermRequest) returns (TermResult) {}
}

message StartRequest {
    int64 appID  = 1;
}

message StartResult {
    int64 appID  = 1;
    bool success = 2;
}

message TermRequest {
    int64 appID = 1;
    int64 code = 2;
}

message TermResult {
    int64 appID  = 1;
    bool success = 2;
}